--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-formatter-pretty": "^1.3.0",
     "mocha": "^3.5.3",
     "npm-package-json-lint": "^2.11.0",
+    "npm-package-json-lint-config-tc": "^1.0.0",
     "nyc": "^11.2.1",
     "sinon": "^3.2.1"
   },
