--- a/.npmpackagejsonlintrc.json
+++ b/.npmpackagejsonlintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "npm-package-json-lint-config-tc"
+  "extends": "npm-package-json-lint-config-tc",
+  "rules": {
+    "require-main": "off",
+    "require-peerDependencies": "off"
+  }
 }
