--- a/package.json
+++ b/package.json
@@ -29,34 +29,34 @@
   "scripts": {
     "eslint": "eslint . --format=node_modules/eslint-formatter-pretty",
     "lint": "npm run npmpackagejsonlint && npm run eslint",
-    "npmpackagejsonlint": "pjl-cli -c ./.npmpackagejsonlintrc.json",
+    "npmpackagejsonlint": "npmPkgJsonLint .",
     "test": "mocha test/unit --recursive",
     "coverage": "nyc --extension .js --check-coverage --lines 1 --branches 1 --functions 1 npm test"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^4.10.0",
-    "eslint-config-tc": "^2.1.0",
+    "eslint": "^4.19.1",
+    "eslint-config-tc": "^3.0.0",
     "eslint-formatter-pretty": "^1.3.0",
-    "mocha": "^4.0.1",
-    "npm-package-json-lint": "^2.11.0",
-    "npm-package-json-lint-config-tc": "^1.1.0",
-    "nyc": "^11.2.1",
-    "sinon": "^4.0.2"
+    "mocha": "^5.2.0",
+    "npm-package-json-lint": "^3.0.1",
+    "npm-package-json-lint-config-tc": "^2.0.0",
+    "nyc": "^11.7.1",
+    "sinon": "^4.5.0"
   },
   "dependencies": {
-    "chalk": "^2.3.0",
+    "chalk": "^2.4.1",
     "commander": "^2.11.0",
     "dateparser": "^1.0.6",
-    "moment": "^2.19.3",
-    "pretty-ms": "^3.0.1",
-    "request": "^2.83.0",
+    "moment": "^2.22.2",
+    "pretty-ms": "^3.2.0",
+    "request": "^2.87.0",
     "user-home": "^2.0.0"
   },
   "engines": {
-    "node": ">=4.2.0",
-    "npm": ">=2.14.7"
+    "node": ">=6.0.0",
+    "npm": ">=3.0.0"
   },
   "license": "MIT"
 }
