Move api classes to external bitbucket-server-api package

--- a/.npmpackagejsonlintrc.json
+++ b/.npmpackagejsonlintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "npm-package-json-lint-config-tc",
   "rules": {
+    "prefer-no-version-zero-dependencies": "warning",
     "require-main": "off",
     "require-peerDependencies": "off"
   }
