--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sinon": "^4.5.0"
   },
   "dependencies": {
+    "bitbucket-server-api": "^0.1.0",
     "chalk": "^2.4.1",
     "commander": "^2.11.0",
     "dateparser": "^1.0.6",
