--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: "ci"
 on:
   pull_request:
   push:
+    branches:
+      - master
 
 jobs:
   lint:
@@ -26,7 +28,8 @@ jobs:
     strategy:
       matrix:
         node: [10, 12, 13]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        # windows-latest
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v2
